fix: add JWT key env var and volume mounts to ufp-auth/zhiyu-admin deployments, linter improvements
- Add ZHIYU_AUTH_JWT_KEY_DIR env var and jwt-keys volume mount to both deployments
- Add copyright headers, Javadoc, extract named constants in service files
- Fix JwtKeyLoader: extract PEM boundary + algorithm constants
- Fix TotpAlgorithm: add Javadoc and constants
- Fix filters and exception handlers: add Javadoc and constants